force-app/main/default/objects/Case/fields/AccidentCertificate__c.field-meta.xml
<CustomField>
    <fullName>AccidentCertificate__c</fullName>
    <label>無事故証明</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>