force-app/main/default/objects/Case/fields/AccidentDateRevealed__c.field-meta.xml
<CustomField>
    <fullName>AccidentDateRevealed__c</fullName>
    <label>事故日判明</label>
    <length>255</length>
    <type>Text</type>
</CustomField>