force-app/main/default/objects/Case/fields/AccidentSituation__c.field-meta.xml
<CustomField>
    <fullName>AccidentSituation__c</fullName>
    <label>事故状況文</label>
    <length>255</length>
    <type>Text</type>
</CustomField>