force-app/main/default/objects/Case/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>口座名義</label>
    <length>40</length>
    <type>Text</type>
</CustomField>