force-app/main/default/objects/Case/fields/AccountNo__c.field-meta.xml
<CustomField>
    <fullName>AccountNo__c</fullName>
    <label>口座番号</label>
    <length>8</length>
    <type>Text</type>
</CustomField>