force-app/main/default/objects/Case/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>口座種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>普通</fullName>
            </value>
            <value>
                <fullName>当座</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>