force-app/main/default/objects/Case/fields/ActualOwnerRelationship__c.field-meta.xml
<CustomField>
    <fullName>ActualOwnerRelationship__c</fullName>
    <label>記名被と実態所有者の関係</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本人</fullName>
            </value>
            <value>
                <fullName>配偶者</fullName>
            </value>
            <value>
                <fullName>同居親族</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>