force-app/main/default/objects/Case/fields/AdditionalReimbursement_Return__c.field-meta.xml
<CustomField>
    <fullName>AdditionalReimbursement_Return__c</fullName>
    <label>追徴・返還有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>追徴</fullName>
            </value>
            <value>
                <fullName>返還</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>