force-app/main/default/objects/Case/fields/AddresseeCorporateName__c.field-meta.xml
<CustomField>
    <fullName>AddresseeCorporateName__c</fullName>
    <label>宛名法人名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>