force-app/main/default/objects/Case/fields/AddresseeCorporateName_Formula__c.field-meta.xml
<CustomField>
    <fullName>AddresseeCorporateName_Formula__c</fullName>
    <description>計上G確認用</description>
    <formula>AddresseeCorporateName__c</formula>
    <label>宛名法人名</label>
    <type>Text</type>
</CustomField>