force-app/main/default/objects/Case/fields/AddresseeName__c.field-meta.xml
<CustomField>
    <fullName>AddresseeName__c</fullName>
    <label>宛名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>