force-app/main/default/objects/Case/fields/AddresseeName_Formula__c.field-meta.xml
<CustomField>
    <fullName>AddresseeName_Formula__c</fullName>
    <description>計上G確認用</description>
    <formula>AddresseeName__c</formula>
    <label>宛名</label>
    <type>Text</type>
</CustomField>