force-app/main/default/objects/Case/fields/AEBDevice__c.field-meta.xml
<CustomField>
    <fullName>AEBDevice__c</fullName>
    <label>AEB装置</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>未選択</fullName>
                <isActive>false</isActive>
                <label>未選択</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>