force-app/main/default/objects/Case/fields/AgencyName__c.field-meta.xml
<CustomField>
    <fullName>AgencyName__c</fullName>
    <label>代理店名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>