force-app/main/default/objects/Case/fields/AgeRequirement__c.field-meta.xml
<CustomField>
    <fullName>AgeRequirement__c</fullName>
    <label>年齢条件</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>対象外</fullName>
            </value>
            <value>
                <fullName>全年齢</fullName>
            </value>
            <value>
                <fullName>21歳</fullName>
            </value>
            <value>
                <fullName>26歳</fullName>
            </value>
            <value>
                <fullName>35歳</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>