force-app/main/default/objects/Case/fields/AgreementKyoei__c.field-meta.xml
<CustomField>
    <fullName>AgreementKyoei__c</fullName>
    <label>共栄火災と契約</label>
    <length>255</length>
    <type>Text</type>
</CustomField>