force-app/main/default/objects/Case/fields/AlertDate_del__c.field-meta.xml
<CustomField>
    <fullName>AlertDate_del__c</fullName>
    <label>アラート日時</label>
    <type>DateTime</type>
</CustomField>