force-app/main/default/objects/Case/fields/AmountOfDeath_Insurance__c.field-meta.xml
<CustomField>
    <fullName>AmountOfDeath_Insurance__c</fullName>
    <label>搭乗者傷害死亡後遺保険金額（万円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>