force-app/main/default/objects/Case/fields/AmountOfInsuranceForDeathAndResiduals__c.field-meta.xml
<CustomField>
    <fullName>AmountOfInsuranceForDeathAndResiduals__c</fullName>
    <label>死亡後遺保険金額（万円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>