force-app/main/default/objects/Case/fields/AnswerDate__c.field-meta.xml
<CustomField>
    <fullName>AnswerDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>登録日時</label>
    <type>DateTime</type>
</CustomField>