force-app/main/default/objects/Case/fields/AnswerDate_Search__c.field-meta.xml
<CustomField>
    <fullName>AnswerDate_Search__c</fullName>
    <description>登録日時の検索用項目</description>
    <label>登録日時（検索用）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>