force-app/main/default/objects/Case/fields/ApplicationRequest__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRequest__c</fullName>
    <description>No167「受付種別」が『電話』の時は、「申込日時」は「登録日時」と同様にケース作成時点の日時がが自動反映されるようにしたい</description>
    <label>申込（請求）日時</label>
    <type>DateTime</type>
</CustomField>