force-app/main/default/objects/Case/fields/ApplicationRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRequestDate__c</fullName>
    <formula>DATEVALUE(ApplicationRequest__c)</formula>
    <label>申込（請求）日付</label>
    <type>Date</type>
</CustomField>