force-app/main/default/objects/Case/fields/appropriation_InquiryDetail__c.field-meta.xml
<CustomField>
    <fullName>appropriation_InquiryDetail__c</fullName>
    <label>計上_照会内容詳細</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>