force-app/main/default/objects/Case/fields/Appropriation_Name__c.field-meta.xml
<CustomField>
    <fullName>Appropriation_Name__c</fullName>
    <displayFormat>{YYYY}-{MM}-{DD}-{00000}</displayFormat>
    <label>計上_入電情報_連番</label>
    <type>AutoNumber</type>
</CustomField>