force-app/main/default/objects/Case/fields/ApproximationStatus__c.field-meta.xml
<CustomField>
    <fullName>ApproximationStatus__c</fullName>
    <label>計上ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KCC処理中</fullName>
                <default>true</default>
                <label>KCC処理中</label>
            </value>
            <value>
                <fullName>計上受付</fullName>
            </value>
            <value>
                <fullName>計上完了</fullName>
            </value>
            <value>
                <fullName>解約受付</fullName>
            </value>
            <value>
                <fullName>書類発送</fullName>
            </value>
            <value>
                <fullName>書類不備</fullName>
            </value>
            <value>
                <fullName>書類督促</fullName>
            </value>
            <value>
                <fullName>解約完了</fullName>
            </value>
            <value>
                <fullName>クローズ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>