force-app/main/default/objects/Case/fields/AutoContinueStopItem__c.field-meta.xml
<CustomField>
    <fullName>AutoContinueStopItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動継続停止</label>
    <type>Checkbox</type>
</CustomField>