force-app/main/default/objects/Case/fields/BasisCarPricing__c.field-meta.xml
<CustomField>
    <fullName>BasisCarPricing__c</fullName>
    <label>車価設定根拠</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>車価表</fullName>
            </value>
            <value>
                <fullName>RedBook</fullName>
            </value>
            <value>
                <fullName>SV</fullName>
            </value>
            <value>
                <fullName>支援スタッフ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>