force-app/main/default/objects/Case/fields/BasisForSetting__c.field-meta.xml
<CustomField>
    <fullName>BasisForSetting__c</fullName>
    <label>名称変更</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>車価表</fullName>
            </value>
            <value>
                <fullName>RedBook</fullName>
            </value>
            <value>
                <fullName>SV</fullName>
            </value>
            <value>
                <fullName>支援スタッフ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>