force-app/main/default/objects/Case/fields/BicycleAccident__c.field-meta.xml
<CustomField>
    <fullName>BicycleAccident__c</fullName>
    <label>自転車傷害</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>