force-app/main/default/objects/Case/fields/BillingDocumentsConfirmation__c.field-meta.xml
<CustomField>
    <fullName>BillingDocumentsConfirmation__c</fullName>
    <label>請求書類確認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>