force-app/main/default/objects/Case/fields/BirthdayNewSubscriber__c.field-meta.xml
<CustomField>
    <fullName>BirthdayNewSubscriber__c</fullName>
    <label>記名被保険者生年月日</label>
    <length>20</length>
    <type>Text</type>
</CustomField>