force-app/main/default/objects/Case/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <label>支店コード</label>
    <length>3</length>
    <type>Text</type>
</CustomField>