force-app/main/default/objects/Case/fields/BranchName__c.field-meta.xml
<CustomField>
    <fullName>BranchName__c</fullName>
    <label>支店名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>