force-app/main/default/objects/Case/fields/Broadcast__c.field-meta.xml
<CustomField>
    <fullName>Broadcast__c</fullName>
    <label>同報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>