force-app/main/default/objects/Case/fields/BusinessContact__c.field-meta.xml
<CustomField>
    <fullName>BusinessContact__c</fullName>
    <label>計上_業務連絡</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>