force-app/main/default/objects/Case/fields/Call_ReflectionDestination__c.field-meta.xml
<CustomField>
    <fullName>Call_ReflectionDestination__c</fullName>
    <label>計上_対象業務内容</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>火災新規</fullName>
            </value>
            <value>
                <fullName>自動継続停止</fullName>
            </value>
            <value>
                <fullName>証券再発行</fullName>
            </value>
            <value>
                <fullName>自賠責解約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>