force-app/main/default/objects/Case/fields/CallData__c.field-meta.xml
<CustomField>
    <fullName>CallData__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>対象のコールデータ</label>
    <referenceTo>FormSent__c</referenceTo>
    <relationshipLabel>カスタマーセンターコールデータ</relationshipLabel>
    <relationshipName>CallData_relation</relationshipName>
    <type>Lookup</type>
</CustomField>