force-app/main/default/objects/Case/fields/Caller_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>Caller_PhoneNumber__c</fullName>
    <label>着信電話番号</label>
    <type>Phone</type>
</CustomField>