force-app/main/default/objects/Case/fields/CallerRelation__c.field-meta.xml
<CustomField>
    <fullName>CallerRelation__c</fullName>
    <label>入電者の続柄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>