force-app/main/default/objects/Case/fields/CallPerson__c.field-meta.xml
<CustomField>
    <fullName>CallPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>計上_入電担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>appropriation_CallPerson_relation</relationshipName>
    <type>Lookup</type>
</CustomField>