force-app/main/default/objects/Case/fields/CallTime__c.field-meta.xml
<CustomField>
    <fullName>CallTime__c</fullName>
    <label>通話時間（分）</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>