force-app/main/default/objects/Case/fields/Cancellation_Cancellation_Completed_Conv__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Cancellation_Completed_Conv__c</fullName>
    <label>解約完了_会話相手</label>
    <length>255</length>
    <type>Text</type>
</CustomField>