force-app/main/default/objects/Case/fields/Cancellation_Complete_Address__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Complete_Address__c</fullName>
    <label>解約完了_送付先番地・マンション</label>
    <length>255</length>
    <type>Text</type>
</CustomField>