force-app/main/default/objects/Case/fields/Cancellation_Completed_Addressee_SCompan__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Completed_Addressee_SCompan__c</fullName>
    <label>解約完了_宛名法人名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>