force-app/main/default/objects/Case/fields/Cancellation_Initiated_Initiated_Initiat__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Initiated_Initiated_Initiat__c</fullName>
    <label>解約完了_着信電話番号</label>
    <length>12</length>
    <type>Text</type>
</CustomField>