force-app/main/default/objects/Case/fields/Cancellation_Inquiry_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Inquiry_Detail__c</fullName>
    <label>解約完了_照会内容詳細</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>