force-app/main/default/objects/Case/fields/Cancellation_Response_Content__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Response_Content__c</fullName>
    <label>解約完了_回答内容</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>