force-app/main/default/objects/Case/fields/CancellationCompleted_DateOfIncoming_Out__c.field-meta.xml
<CustomField>
    <fullName>CancellationCompleted_DateOfIncoming_Out__c</fullName>
    <label>解約完了_入電/発信日時</label>
    <type>DateTime</type>
</CustomField>