force-app/main/default/objects/Case/fields/CancellationCompleted_Incoming_Telephone__c.field-meta.xml
<CustomField>
    <fullName>CancellationCompleted_Incoming_Telephone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約完了_入電_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CancellationCompleted_Incoming_Tele_rela</relationshipName>
    <type>Lookup</type>
</CustomField>