force-app/main/default/objects/Case/fields/CancellationCompletion_Address__c.field-meta.xml
<CustomField>
    <fullName>CancellationCompletion_Address__c</fullName>
    <label>解約完了_送付先住所</label>
    <length>100</length>
    <type>Text</type>
</CustomField>