force-app/main/default/objects/Case/fields/CancellationContractReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationContractReason__c</fullName>
    <label>解約理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>廃車</fullName>
            </value>
            <value>
                <fullName>譲渡</fullName>
            </value>
            <value>
                <fullName>返還</fullName>
            </value>
            <value>
                <fullName>車検切れ</fullName>
            </value>
            <value>
                <fullName>海外渡航</fullName>
            </value>
            <value>
                <fullName>退職</fullName>
            </value>
            <value>
                <fullName>他社移行</fullName>
            </value>
            <value>
                <fullName>その他（別途記載）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>