force-app/main/default/objects/Case/fields/Car_To_VehicleExemptionZero__c.field-meta.xml
<CustomField>
    <fullName>Car_To_VehicleExemptionZero__c</fullName>
    <label>車対車免ゼロ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>