force-app/main/default/objects/Case/fields/CarInspectionCertificate__c.field-meta.xml
<CustomField>
    <fullName>CarInspectionCertificate__c</fullName>
    <label>車検証一筆　【セルフチェック】</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>