force-app/main/default/objects/Case/fields/CarryingItems__c.field-meta.xml
<CustomField>
    <fullName>CarryingItems__c</fullName>
    <label>携行品・用品</label>
    <length>255</length>
    <type>Text</type>
</CustomField>