force-app/main/default/objects/Case/fields/CarType__c.field-meta.xml
<CustomField>
    <fullName>CarType__c</fullName>
    <label>車両保険種類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一般</fullName>
            </value>
            <value>
                <fullName>車対車限定A</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>