force-app/main/default/objects/Case/fields/CaseCommentForReport__c.field-meta.xml
<CustomField>
    <fullName>CaseCommentForReport__c</fullName>
    <label>ケースコメント（代理店報告リスト用）</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>