force-app/main/default/objects/Case/fields/CauseOfDamages__c.field-meta.xml
<CustomField>
    <fullName>CauseOfDamages__c</fullName>
    <label>損害原因</label>
    <length>255</length>
    <type>Text</type>
</CustomField>