force-app/main/default/objects/Case/fields/CertificateInterruption__c.field-meta.xml
<CustomField>
    <fullName>CertificateInterruption__c</fullName>
    <label>中断証明書</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>発行希望（国内特則）</fullName>
            </value>
            <value>
                <fullName>発行希望（海外特則）</fullName>
            </value>
            <value>
                <fullName>発行希望（その他）</fullName>
            </value>
            <value>
                <fullName>発行不要</fullName>
            </value>
            <value>
                <fullName>発行対象外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>