force-app/main/default/objects/Case/fields/CertificateNumber_Number__c.field-meta.xml
<CustomField>
    <fullName>CertificateNumber_Number__c</fullName>
    <formula>if(isBlank(PolicyNumber__c ),  LEN( StockNumberMainNumber__c), LEN( PolicyNumber__c ))</formula>
    <label>証券番号</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>