force-app/main/default/objects/Case/fields/ChangeInContinuingContracts__c.field-meta.xml
<CustomField>
    <fullName>ChangeInContinuingContracts__c</fullName>
    <label>継続契約異動　【セルフチェック】</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>必要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>