force-app/main/default/objects/Case/fields/ChangeOfAddress__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfAddress__c</fullName>
    <label>被保険者住所変更有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>