force-app/main/default/objects/Case/fields/ChangeOfAddress_No480__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfAddress_No480__c</fullName>
    <formula>IF(TEXT(ChangeOfAddress__c) = &quot;無し&quot;, &quot;無&quot;, TEXT(ChangeOfAddress__c))</formula>
    <label>被保険者住所変更有無（項番480）</label>
    <type>Text</type>
</CustomField>