force-app/main/default/objects/Case/fields/ChangeOfInsured_Saddress_73__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfInsured_Saddress_73__c</fullName>
    <defaultValue>false</defaultValue>
    <label>73（被保険者住所変更）</label>
    <type>Checkbox</type>
</CustomField>