force-app/main/default/objects/Case/fields/ChangeOfInsured_Saddress_73_Formula__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfInsured_Saddress_73_Formula__c</fullName>
    <description>受付項目（事由）_複数で被保険者住所変更が選択されている場合、自動反映する</description>
    <formula>INCLUDES(ReceiptItem_Reason_Multi__c, &quot;被保険者住所変更&quot;)</formula>
    <label>73（被保険者住所変更）</label>
    <type>Checkbox</type>
</CustomField>