force-app/main/default/objects/Case/fields/ChangeOfNamedInsuredInformation__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfNamedInsuredInformation__c</fullName>
    <label>記名被保険者情報変更の有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>記名被の改姓</fullName>
            </value>
            <value>
                <fullName>記名被を別人格に変更</fullName>
            </value>
            <value>
                <fullName>記名被住所の変更</fullName>
            </value>
            <value>
                <fullName>※複数選択あり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>