force-app/main/default/objects/Case/fields/ChangeOfPolicyholderSaddres_16_Formula__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfPolicyholderSaddres_16_Formula__c</fullName>
    <description>受付項目（事由）_複数で契約者住所変更が選択されている場合、自動反映する</description>
    <formula>INCLUDES(ReceiptItem_Reason_Multi__c, &quot;契約者住所変更&quot;)</formula>
    <label>16（契約者住所変更）</label>
    <type>Checkbox</type>
</CustomField>