force-app/main/default/objects/Case/fields/ChangeOfSubscriberInformation__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfSubscriberInformation__c</fullName>
    <label>契約者情報変更の有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>