force-app/main/default/objects/Case/fields/ChangeOfTelephoneNumber_86_Formula__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfTelephoneNumber_86_Formula__c</fullName>
    <description>受付項目（事由）_複数で電話番号変更が選択されている場合、自動反映する</description>
    <formula>INCLUDES(ReceiptItem_Reason_Multi__c, &quot;電話番号変更&quot;)</formula>
    <label>86（電話番号変更）</label>
    <type>Checkbox</type>
</CustomField>