force-app/main/default/objects/Case/fields/ChangeOfVehicleInformation__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfVehicleInformation__c</fullName>
    <label>車両情報変更の有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>